# alga

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  README.md  RELEASE_NOTES.md  release_notes_v1.0.0.md  test_alga_simple.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cmake/: alga_config.cmake.in  algebraic_parsers_config.cmake.in
examples/: algebraic_operators_demo  algebraic_operators_demo.cpp  composition_examples.hpp  novel_parser_applications.cpp  novel_parser_applications_executable
include/aperture/detail/: lambda.hpp
include/parsers/: ParserARFF.h  algebraic_operators.hpp  arff_machine.hpp  combinatorial_parser.hpp  combinatorial_parser_fixed.hpp  count_combinators.hpp  dsl_examples.hpp  fsm_string_rewriter.hpp  fsm_string_rewriter_driver.cpp  fuzzy_parsers.hpp  lc_alpha.hpp  list_combinators.hpp  monadic_combinators.hpp  narrative_algebra.hpp  ngram_stemmer.hpp  normalization.hpp  numeric_parsers.hpp  optional_combinator.hpp  parse_error.hpp  phonetic.hpp  porter2stemmer.cpp  porter2stemmer.h  porter2stemmer.hpp  rhythmic_meter.hpp  semantic_topology.hpp  similarity.hpp  statistics.hpp  streaming_parser.hpp  utf8_alpha.hpp  word_parser.hpp
test/: aperture_test.cpp  composition_test.cpp  comprehensive_alga_tests  comprehensive_alga_tests.cpp  core_alga_tests  core_alga_tests.cpp  count_combinators_test.cpp  fsm_string_rewriter_driver.cpp  fuzzy_parsers_test.cpp  integration_tests.cpp  lc_alpha_test  lc_alpha_test.cpp  list_combinators_test.cpp  normalization_test.cpp  numeric_parsers_test.cpp  optional_combinator_test.cpp  parse_error_test.cpp  performance_benchmark.cpp  phonetic_test.cpp  porter2stemmer_test.cpp  similarity_test.cpp  statistics_test.cpp  streaming_parser_test.cpp  unit_tests.cpp  utf8_alpha_test.cpp
